--- a/res/xml/paranoid.xml
+++ b/res/xml/paranoid.xml
@@ -31,4 +31,26 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/category_name_battery_styles" >
+
+        <co.aospa.framework.preference.SecureSettingListPreference
+            android:key="status_bar_battery_style"
+            android:title="@string/status_bar_battery_style_title"
+            android:summary="%s"
+            android:dialogTitle="@string/status_bar_battery_style_title"
+            android:entries="@array/status_bar_battery_style_entries"
+            android:entryValues="@array/status_bar_battery_style_values"
+            android:defaultValue="0" />
+
+        <co.aospa.framework.preference.SecureSettingListPreference
+            android:key="status_bar_show_battery_percent"
+            android:title="@string/status_bar_battery_percentage_title"
+            android:dialogTitle="@string/status_bar_battery_percentage_title"
+            android:entries="@array/battery_percent_entries"
+            android:entryValues="@array/battery_percent_values"
+            android:defaultValue="0" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
