--- a/res/xml/paranoid.xml
+++ b/res/xml/paranoid.xml
@@ -53,4 +53,23 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/category_name_qs_styles">
+
+        <co.aospa.framework.preference.SecureSettingListPreference
+            android:key="qs_style_round"
+            android:title="@string/qs_style_title"
+            android:entries="@array/qs_style_entries"
+            android:entryValues="@array/qs_style_values"
+            android:defaultValue="0" />
+
+        <co.aospa.framework.preference.SecureSettingListPreference
+            android:key="qs_tile_shape"
+            android:title="@string/qs_tile_shape"
+            android:entries="@array/qs_tile_shape_entries"
+            android:entryValues="@array/qs_tile_shape_values"
+            android:defaultValue="2" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
