ParanoidSettings: Add toggle for Lockscreen Media Art
* Allows to choose whether or not to show album art/media art on lockscreen

Change-Id: Ieea583a0e42c317e1651ecaba66ac07c02934250
Signed-off-by: Mohammad Hasan Keramat J <ikeramat@protonmail.com>

--- a/res/xml/paranoid.xml
+++ b/res/xml/paranoid.xml
@@ -72,4 +72,15 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/category_name_lockscreen">
+
+        <co.aospa.framework.preference.SecureSettingSwitchPreference
+            android:key="lockscreen_media_metadata"
+            android:title="@string/lockscreen_media_art_title"
+            android:summary="@string/lockscreen_media_art_summary"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
