--- a/res/xml/paranoid.xml
+++ b/res/xml/paranoid.xml
@@ -70,6 +70,16 @@
             android:entryValues="@array/qs_tile_shape_values"
             android:defaultValue="2" />
 
+        <co.aospa.framework.preference.CustomSecureSeekBarPreference
+            android:key="qs_transparency"
+            android:title="@string/qs_transparency_title"
+            android:summary="@string/qs_transparency_summary"
+            android:defaultValue="100"
+            settings:interval="1"
+            settings:units="%"
+            android:max="100"
+            android:min="1" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
