ParanoidSettings: Add toggle for QTI BoostFramework [2/2]

--- a/res/xml/paranoid.xml
+++ b/res/xml/paranoid.xml
@@ -93,4 +93,15 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/category_name_performance">
+
+        <co.aospa.framework.preference.SecureSettingSwitchPreference
+            android:key="qti_boost_framework"
+            android:title="@string/qti_boost_framework_title"
+            android:summary="@string/qti_boost_framework_summary"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
